--- a/FinalProject_previous.ipynb
+++ b/FinalProject_previous.ipynb
@@ -12449,7 +12449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12458,7 +12458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12624,17 +12624,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 상대적으로 투표를 더 많이하는 종교와 아닌 종교 비교\n",
-    "train['religion_yes'] = np.where((train['religion'] == \"jewish\") | (train['religion'] == \"Christian_Protestant\"),1,0)"
+    "train['religion_yes'] = np.where((train['religion'] == \"jewish\") | (train['religion'] == \"Christian_Protestant\")| (train['religion'] == \"Christian_Catholic\"),1,0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -12665,25 +12665,25 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>religion_yes</th>\n",
-       "      <td>1.00000</td>\n",
-       "      <td>-0.07802</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.069175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>voted</th>\n",
-       "      <td>-0.07802</td>\n",
-       "      <td>1.00000</td>\n",
+       "      <td>-0.069175</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              religion_yes    voted\n",
-       "religion_yes       1.00000 -0.07802\n",
-       "voted             -0.07802  1.00000"
+       "              religion_yes     voted\n",
+       "religion_yes      1.000000 -0.069175\n",
+       "voted            -0.069175  1.000000"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
