--- a/FinalProject_previous.ipynb
+++ b/FinalProject_previous.ipynb
@@ -6225,7 +6225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13323,7 +13323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -13346,7 +13346,7 @@
        "Name: urban_new, Length: 45532, dtype: int64"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13357,7 +13357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13368,7 +13368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -13482,7 +13482,7 @@
        "[45532 rows x 2 columns]"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14713,11 +14713,184 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1013 노을\n",
+    "### urban   \n",
+    "####  (1) other를 근교로 넣은 상태에서 urban_group- > 도시 + 근교 (1) / 시골  (0) -> 상관계수  // 기존 하려 했던 방법\n",
+    "\n",
+    "#### 엑셀로 확인한 결과\n",
+    "other (voted1) 164  >  (voted2) 158\n",
+    "rural (voted1) 4518 >  (voted2) 4391\n",
+    "근교 (voted1) 8497  <  (voted2) 10037\n",
+    "도시 (voted1) 7455  <  (voted2) 10312\n",
+    "=> \n",
+    "####  (2) other를 rural로 넣은 상태에서  urban_group1 - > 도시 + 근교 (1) / 시골  (0) -> 상관계수 해봄\n",
+    "\n",
+    "#### 결과 : 둘 다  0.05~~으로 별차이 없음 \n",
+    "  \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>urban_group</th>\n",
+       "      <th>voted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>urban_group</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.053455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>voted</th>\n",
+       "      <td>0.053455</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             urban_group     voted\n",
+       "urban_group     1.000000  0.053455\n",
+       "voted           0.053455  1.000000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (1) 기존 group\n",
+    "ug1 = train.loc[:,['urban_group','voted']]\n",
+    "ug1.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "urban_new1\n",
+       "1     9231\n",
+       "2    18534\n",
+       "3    17767\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (2) 무응답 1(rural)로!\n",
+    "train['urban_new1'] = np.where((train['urban']==0),1,train['urban'])\n",
+    "train.groupby(['urban_new1']).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train['urban_group1'] = np.where(train['urban_new1']==1,0,train[\"urban_new1\"])\n",
+    "train['urban_group1'] = np.where(train['urban_new1']==3,1,train['urban_group1'])\n",
+    "train['urban_group1'] = np.where(train['urban_new1']==2,1,train['urban_group1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>urban_group1</th>\n",
+       "      <th>voted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>urban_group1</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.05473</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>voted</th>\n",
+       "      <td>0.05473</td>\n",
+       "      <td>1.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              urban_group1    voted\n",
+       "urban_group1       1.00000  0.05473\n",
+       "voted              0.05473  1.00000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ug2 = train.loc[:,['urban_group1','voted']]\n",
+    "ug2.corr()"
+   ]
   },
   {
    "cell_type": "code",
