1013 혜린, 노을 완료

--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -1698,11 +1698,7 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD:FinalProject_previous.ipynb
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d142d3f148>"
-=======
        "<matplotlib.axes._subplots.AxesSubplot at 0x247e6c49c48>"
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
       ]
      },
      "execution_count": 8,
@@ -1764,11 +1760,7 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD:FinalProject_previous.ipynb
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d1438691c8>"
-=======
        "<matplotlib.axes._subplots.AxesSubplot at 0x247e5543188>"
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
       ]
      },
      "execution_count": 10,
@@ -1883,7 +1875,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2012,11 +2004,7 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD:FinalProject_previous.ipynb
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d1445fbc88>"
-=======
        "<matplotlib.axes._subplots.AxesSubplot at 0x247e8a94a88>"
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
       ]
      },
      "execution_count": 15,
@@ -2189,11 +2177,7 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD:FinalProject_previous.ipynb
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d14467a748>"
-=======
        "<matplotlib.axes._subplots.AxesSubplot at 0x247e6dffac8>"
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
       ]
      },
      "execution_count": 18,
@@ -4826,11 +4810,7 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD:FinalProject_previous.ipynb
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d1440ce848>"
-=======
        "<matplotlib.axes._subplots.AxesSubplot at 0x247e82a0f08>"
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
       ]
      },
      "execution_count": 49,
@@ -4919,11 +4899,7 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD:FinalProject_previous.ipynb
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d143d0c588>"
-=======
        "<matplotlib.axes._subplots.AxesSubplot at 0x247e8282248>"
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
       ]
      },
      "execution_count": 51,
@@ -5014,11 +4990,7 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD:FinalProject_previous.ipynb
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d143d78e88>"
-=======
        "<matplotlib.axes._subplots.AxesSubplot at 0x247e7e9c448>"
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
       ]
      },
      "execution_count": 53,
@@ -5526,11 +5498,7 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD:FinalProject_previous.ipynb
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d144522808>"
-=======
        "<matplotlib.axes._subplots.AxesSubplot at 0x247e89c5fc8>"
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
       ]
      },
      "execution_count": 65,
@@ -5729,11 +5697,7 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD:FinalProject_previous.ipynb
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d1445f2908>"
-=======
        "<matplotlib.axes._subplots.AxesSubplot at 0x247e1e693c8>"
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
       ]
      },
      "execution_count": 71,
@@ -5784,11 +5748,7 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD:FinalProject_previous.ipynb
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d1440a91c8>"
-=======
        "<matplotlib.axes._subplots.AxesSubplot at 0x247e7f6fa88>"
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
       ]
      },
      "execution_count": 73,
@@ -5981,11 +5941,7 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD:FinalProject_previous.ipynb
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d1445998c8>"
-=======
        "<matplotlib.axes._subplots.AxesSubplot at 0x247e8a58548>"
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
       ]
      },
      "execution_count": 77,
@@ -6039,11 +5995,7 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD:FinalProject_previous.ipynb
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d14453c408>"
-=======
        "<matplotlib.axes._subplots.AxesSubplot at 0x247e8a06a48>"
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
       ]
      },
      "execution_count": 79,
@@ -6187,11 +6139,7 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD:FinalProject_previous.ipynb
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d1444ea648>"
-=======
        "<matplotlib.axes._subplots.AxesSubplot at 0x247e89a6508>"
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
       ]
      },
      "execution_count": 83,
@@ -6277,7 +6225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6295,11 +6243,7 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD:FinalProject_previous.ipynb
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1d1442f6ac8>"
-=======
        "<matplotlib.axes._subplots.AxesSubplot at 0x247eea19288>"
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
       ]
      },
      "execution_count": 87,
@@ -12026,11 +11970,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD:FinalProject_previous.ipynb
-   "execution_count": 165,
-=======
    "execution_count": 31,
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12509,11 +12449,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD:FinalProject_previous.ipynb
-   "execution_count": 4,
-=======
    "execution_count": 176,
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12522,11 +12458,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD:FinalProject_previous.ipynb
-   "execution_count": 5,
-=======
    "execution_count": 177,
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12692,25 +12624,17 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD:FinalProject_previous.ipynb
-   "execution_count": 6,
-=======
    "execution_count": 179,
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
    "metadata": {},
    "outputs": [],
    "source": [
     "# 상대적으로 투표를 더 많이하는 종교와 아닌 종교 비교\n",
-    "train['religion_yes'] = np.where((train['religion'] == \"jewish\") | (train['religion'] == \"Christian_Protestant\")| (train['religion'] == \"Christian_Catholic\"),1,0)"
+    "train['religion_yes'] = np.where((train['religion'] == \"jewish\") | (train['religion'] == \"Christian_Protestant\"),1,0)"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD:FinalProject_previous.ipynb
-   "execution_count": 7,
-=======
    "execution_count": 180,
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
    "metadata": {},
    "outputs": [
     {
@@ -12741,29 +12665,25 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>religion_yes</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.069175</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>-0.07802</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>voted</th>\n",
-       "      <td>-0.069175</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>-0.07802</td>\n",
+       "      <td>1.00000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              religion_yes     voted\n",
-       "religion_yes      1.000000 -0.069175\n",
-       "voted            -0.069175  1.000000"
+       "              religion_yes    voted\n",
+       "religion_yes       1.00000 -0.07802\n",
+       "voted             -0.07802  1.00000"
       ]
      },
-<<<<<<< HEAD:FinalProject_previous.ipynb
-     "execution_count": 7,
-=======
      "execution_count": 180,
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13403,11 +13323,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD:FinalProject_previous.ipynb
-   "execution_count": 5,
-=======
-   "execution_count": 191,
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -13430,11 +13346,7 @@
        "Name: urban_new, Length: 45532, dtype: int64"
       ]
      },
-<<<<<<< HEAD:FinalProject_previous.ipynb
-     "execution_count": 5,
-=======
-     "execution_count": 191,
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13445,11 +13357,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD:FinalProject_previous.ipynb
-   "execution_count": 6,
-=======
-   "execution_count": 192,
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13460,11 +13368,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD:FinalProject_previous.ipynb
-   "execution_count": 7,
-=======
-   "execution_count": 193,
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -13578,11 +13482,7 @@
        "[45532 rows x 2 columns]"
       ]
      },
-<<<<<<< HEAD:FinalProject_previous.ipynb
-     "execution_count": 7,
-=======
-     "execution_count": 193,
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13791,11 +13691,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 197,
-=======
    "execution_count": 3,
->>>>>>> fbec6eb618729ce940aa77e586dd888b4be3ea4c
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13807,118 +13703,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 198,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "age1\n",
-       "0    28327\n",
-       "1    15776\n",
-       "2     1429\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 198,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "age1 = train.groupby('age1').size()\n",
-    "age1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 199,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('int64')"
-      ]
-     },
-     "execution_count": 199,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train = train.astype({'age1':'int64'})\n",
-    "train['age1'].dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 200,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age1</th>\n",
-       "      <th>voted</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>age1</th>\n",
-       "      <td>1.00000</td>\n",
-       "      <td>-0.27458</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>voted</th>\n",
-       "      <td>-0.27458</td>\n",
-       "      <td>1.00000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          age1    voted\n",
-       "age1   1.00000 -0.27458\n",
-       "voted -0.27458  1.00000"
-      ]
-     },
-     "execution_count": 200,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "age1_cor = train.loc[:,['age1','voted']]\n",
-    "age1_cor.corr()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 201,
-=======
    "execution_count": 4,
->>>>>>> fbec6eb618729ce940aa77e586dd888b4be3ea4c
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13929,30 +13714,8 @@
    ]
   },
   {
-<<<<<<< HEAD
-   "cell_type": "code",
-   "execution_count": 202,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "age2\n",
-       "0    28327\n",
-       "1    12887\n",
-       "2     4318\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 202,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-=======
    "cell_type": "markdown",
    "metadata": {},
->>>>>>> fbec6eb618729ce940aa77e586dd888b4be3ea4c
    "source": [
     "## 시호\n",
     "    10/2030/4050/6070"
@@ -13960,26 +13723,9 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 203,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('int64')"
-      ]
-     },
-     "execution_count": 203,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-=======
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
->>>>>>> fbec6eb618729ce940aa77e586dd888b4be3ea4c
    "source": [
     "train['age4'] = np.where(train['age_group'] == \"10s\",0,train['age_group'])\n",
     "train['age4'] = np.where((train['age_group'] == \"20s\")|(train['age_group'] == \"30s\"),1,train['age4'])\n",
@@ -13989,11 +13735,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 204,
-=======
    "execution_count": 6,
->>>>>>> fbec6eb618729ce940aa77e586dd888b4be3ea4c
    "metadata": {},
    "outputs": [
     {
@@ -14007,67 +13749,12 @@
        "dtype: int64"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 204,
-=======
      "execution_count": 6,
->>>>>>> fbec6eb618729ce940aa77e586dd888b4be3ea4c
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-<<<<<<< HEAD
-    "age2_cor = train.loc[:,['age2','voted']]\n",
-    "age2_cor.corr()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 시호 age4\n",
-    "\n",
-    "10/ 20 30 /40 50 /60 70 (0,1,2,3 그룹나누기만 열 이름 : age3)  \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 205,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train['age4'] = np.where(train['age_group'] == \"10s\",0,train['age_group'])\n",
-    "train['age4'] = np.where((train['age_group'] == \"20s\")|(train['age_group'] == \"30s\"),1,train['age4'])\n",
-    "train['age4'] = np.where((train['age_group'] == \"40s\")|(train['age_group'] == \"50s\"),2,train['age4'])\n",
-    "train['age4'] = np.where((train['age_group'] == \"60s\")|(train['age_group'] == \"+70s\"),3,train['age4'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "age4\n",
-       "0    14215\n",
-       "1    21948\n",
-       "2     7940\n",
-       "3     1429\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 206,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-=======
->>>>>>> fbec6eb618729ce940aa77e586dd888b4be3ea4c
     "age4 = train.groupby('age4').size()\n",
     "age4"
    ]
@@ -15225,7 +14912,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -15285,32 +14974,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD:FinalProject_previous.ipynb
-   "execution_count": 208,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "voted\n",
-       "1    20634\n",
-       "2    24898\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 208,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.groupby(\"voted\").size()"
-   ]
-  },
-  {
-   "cell_type": "code",
-=======
->>>>>>> 2053d8b2e32cc72b97822b066de0b34670d41785:FinalProject.ipynb
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -15320,25 +14983,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1013 노을\n",
-    "### urban   \n",
-    "####  (1) other를 근교로 넣은 상태에서 urban_group- > 도시 + 근교 (1) / 시골  (0) -> 상관계수  // 기존 하려 했던 방법\n",
+    "### 노을\n",
+    "#### 원래 계획\n",
+    "(1) other를 근교로 넣은 상태에서 - > urban_group 도시 + 근교 (1) / 시골(1) -> 상관계수\n",
     "\n",
-    "#### 엑셀로 확인한 결과\n",
-    "other (voted1) 164  >  (voted2) 158\n",
-    "rural (voted1) 4518 >  (voted2) 4391\n",
-    "근교 (voted1) 8497  <  (voted2) 10037\n",
-    "도시 (voted1) 7455  <  (voted2) 10312\n",
-    "=> \n",
-    "####  (2) other를 rural로 넣은 상태에서  urban_group1 - > 도시 + 근교 (1) / 시골  (0) -> 상관계수 해봄\n",
+    "#### excel로 확인 해 본 결과\n",
+    "other (voted1) 164 , > (vote2) 158\n",
     "\n",
-    "#### 결과 : 둘 다  0.05~~으로 별차이 없음 \n",
-    "  \n"
+    "시골 (voted1) 4518 , > (vote2) 4391\n",
+    "\n",
+    "근교 (voted1) 8491 , < (vote2) 10037\n",
+    "\n",
+    "도시 (voted1) 7455 , < (vote2) 10312\n",
+    "\n",
+    "(2) other를 시골로 넣은 상태에서 - > urban_group1 도시 + 근교 (1) / 시골(1) -> 상관계수\n",
+    "\n",
+    "#### 둘 다 0.05 ~~ 로 의미 없음!\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -15387,15 +15052,26 @@
        "voted           0.053455  1.000000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# (1) 기존 group\n",
+    "#(1)\n",
     "ug1 = train.loc[:,['urban_group','voted']]\n",
     "ug1.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (2)\n",
+    "# 무응답 1(rural)로!\n",
+    "train['urban_new1'] = np.where((train['urban']==0),1,train['urban'])"
    ]
   },
   {
@@ -15419,8 +15095,6 @@
     }
    ],
    "source": [
-    "# (2) 무응답 1(rural)로!\n",
-    "train['urban_new1'] = np.where((train['urban']==0),1,train['urban'])\n",
     "train.groupby(['urban_new1']).size()"
    ]
   },
@@ -15498,7 +15172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -15512,7 +15186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
